src:Program.css - fix overflow when first row contains .empty cells

--- a/src/pages/Program.css
+++ b/src/pages/Program.css
@@ -54,7 +54,7 @@
 
 #program table td.empty {
     vertical-align: top !important;
-    border: none !important;
+    border-color: transparent !important;
     background: none !important;
 }
 
